# Movie-NeuralBase

./: LICENSE  README.md  pyproject.toml  requirements.txt
demo/: app.py  parse.py  populate.py
demo/templates/: error.html  movie.html
front-end/: app.py
front-end/templates/: home.html  layout.html  movie.html  search.html
neural_search/: __init__.py  config.py  metric.py  neural_search.py  prepare_data.py  upload.py
